--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,29 @@
         <filter-class>controller.AuthenticationFilter</filter-class>
     </filter>
 
+    <filter>
+        <filter-name>GuestFilter</filter-name>
+        <filter-class>controller.GuestFilter</filter-class>
+    </filter>
+
     <filter-mapping>
         <filter-name>AuthenticationFilter</filter-name>
         <url-pattern>/customer/*</url-pattern>
     </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>AuthenticationFilter</filter-name>
+        <url-pattern>/seller/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>AuthenticationFilter</filter-name>
+        <url-pattern>/admin/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>GuestFilter</filter-name>
+        <url-pattern>/guest/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
